# pyroll-work-roll-elastic-deformation

./: .gitignore  LICENSE  README.md  hatch.toml  pyproject.toml
docs/: docs.tex  refs.bib
pyroll/work_roll_bending/: __init__.py  disk_element.py  matix_method.py  reporter_impls.py  roll_body.py  roll_hookimpls.py  rollpass_roll_hookimpls.py  rollpass_roll_hookspecs.py
pyroll/work_roll_elastic_deformation/: __init__.py  disk_element.py  matix_method.py  reporter_impls.py  roll_body.py  roll_hookimpls.py  roll_hookspecs.py  rollpass_roll_hookimpls.py  rollpass_roll_hookspecs.py
tests/: input_imf_continuous_rolling_plant.py  test_solve.py
tests/cad/: IMF_F1-K3_50.dxf  IMF_F2-K9_24.dxf  IMF_F3-K3_51.dxf  IMF_F4-K9_23.dxf  IMF_reversing_mill_work_roll.dxf
