[tool.poetry]
name = "pyroll-work-roll-bending"
version = "1.0.0"
description = "Plugin for PyRoll calculating the bending of the work roll through matrix method"
authors = ["Christoph Renzing <christoph.renzing@imf.tu-freiberg.de>"]
license = "BSD-3-Clause"
homepage = "https://pyroll-project.github.io/"
repository = "https://github.com/pyroll-project/pyroll-work-roll-bending"
documentation = "https://pyroll-project.github.io/modules/pyroll-work-roll-bending/docs/docs"
packages = [
    { include = "pyroll/work_roll_bending" }
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = ">= 3.9, <3.11"
pyroll_basic = "^1.0.0"
cad_to_shapely = "^0.3"


[tool.poetry.dev-dependencies]
pytest = "^7.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
