[tool.poetry]
name = "pyroll-work-roll-elastic-deformation"
version = "1.0.0"
description = "Plugin for PyRoll calculating the bending of the work roll by matrix method"
authors = ["Christoph Renzing <christoph.renzing@imf.tu-freiberg.de>"]
license = "BSD-3-Clause"
homepage = "https://pyroll-project.github.io/"
repository = "https://github.com/pyroll-project/work_roll_elastic_deformation"
documentation = "https://pyroll-project.github.io/modules/work_roll_elastic_deformation/docs/docs"
packages = [
    { include = "pyroll/work_roll_elastic_deformation" }
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = ">= 3.9, <3.11"
pyroll-basic = "^1.0.0"
cad-to-shapely = "^0.3.0"


[tool.poetry.dev-dependencies]
pytest = "^7.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
