[project]
name = "pyroll-work-roll-elastic-deformation"
description = "Plugin for PyRolL calculating the elastic deformation of the work roll by usage of the matrix method."
authors = [
    { name = "Christoph Renzing", email = "christoph.renzing@imf.tu-freiberg.de" }
]

license = "BSD-3-Clause"
homepage = "https://pyroll-project.github.io/"
repository = "https://github.com/pyroll-project/pyroll-work-roll-elastic-deformation"
documentation = "https://pyroll-project.github.io/modules/pyroll-work-roll-elastic-deformation/docs/"
packages = [
    { include = "pyroll/work_roll_elastic_deformation"}
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

requires-python = ">=3.9, <4.0"
dependencies = [
    "pyroll-core",
    "cad-to-shapely"
]

dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
